--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cfonts": "^3.3.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
-    "ora": "^8.2.0"
+    "ora": "^8.2.0",
+    "axios": "^1.7.9",
+    "readline": "^1.3.0",
+    "fs": "^0.0.1-security"
   }
 }
