--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "ora": "^8.2.0",
     "axios": "^1.7.9",
     "readline": "^1.3.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "figlet": "^1.8.0"
   }
 }
